# makester

./: .gitignore  404.html  GitVersion.yml  LICENSE  LICENSE.md  Makefile  README.md  README.rst  azure-requirements.txt  index.html  pylintrc  pyproject.toml  python-venv.mk  requirements.txt  setup.cfg  sitemap.xml  utils.mk
.github/workflows/: ci.yml  tests.yml
docs/: mkdocs.yml
docs/docs/: faqs.md  getting-started.md  index.md  macos.md  recipes.md  utilities.md
docs/docs/makefiles/: argocd.md  compose.md  docker.md  docs.md  makester.md  py.md  terraform.md  versioning.md
docs/docs/makefiles/k8s/: k8s.md  kompose.md  microk8s.md
faqs/: index.html
getting-started/: index.html
macos/: index.html
makefiles/: _py-proj.mk  _py-venv.mk  argocd.mk  azure.mk  base.mk  compose.mk  docker.mk  docs.mk  k8s.mk  kompose.mk  makester.mk  microk8s.mk  py.mk  python-venv.mk  terraform.mk  versioning.mk
makefiles/argocd/: index.html
makefiles/compose/: index.html
makefiles/docker/: index.html
makefiles/docs/: index.html
makefiles/k8s/k8s/: index.html
makefiles/k8s/kompose/: index.html
makefiles/k8s/microk8s/: index.html
makefiles/makester/: index.html
makefiles/py/: index.html
makefiles/terraform/: index.html
makefiles/versioning/: index.html
recipes/: index.html
resources/: blank_directory.gitignore  project.gitignore
resources/sample/: GitVersion.yml  Makefile  docker-compose.yml
resources/scripts/: primer.sh
sample/: GitVersion.yml  Makefile  docker-compose.yml
scripts/: backoff
search/: search_index.json
src/: templatester.py
src/makester/: VERSION  __init__.py  __main__.py  cli.py  logging_config.py  templater.py  waitster.py
tests/: test__py-proj.bats  test__py-venv.bats  test_argocd.bats  test_compose.bats  test_compose_stack.bats  test_docker.bats  test_docker_image.bats  test_docs.bats  test_k8s.bats  test_kompose.bats  test_makester.bats  test_microk8s.bats  test_py.bats  test_python-venv.bats  test_terraform.bats  test_versioning.bats
tools/: install.sh  uninstall.sh
utilities/: index.html
utils/: templatester.py  waitster.py
