[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-git-versioning>=2.0,<3",
]
build-backend = "setuptools.build_meta"

[project]
name = "makester"
authors = [
    {name = "Lou Markovski", email = "lou.markovski@gmail.com"},
]
description = "Common Project Build and Management Tooling"
readme = "README.md"
requires-python = ">=3"
license = {file = "LICENCE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Jinja2",
    "backoff",
    "black",
    "build",
    "mdformat",
    "mdformat-admon",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings-python",
    "mypy",
    "pipdeptree",
    "ruff",
    "structlog",
    "typer[all]",
]
dynamic = ["version"]

[tool.setuptools-git-versioning]
enabled = true
version_file = "src/makester/VERSION"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
makester = ["VERSION"]

[project.scripts]
makester = "makester.__main__:app"

[project.urls]
Documentation = "https://loum.github.io/makester/"
Repository = "https://github.com/loum/makester"
Issues = "https://github.com/loum/makester/issues"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    # pylint
    "PLC", "PLE", "PLR", "PLW",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pylint
    "PLC", "PLE", "PLR", "PLW",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
]
ignore = [
    "D211",  # no-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "E731",  # DoNotAssignLambda
]

[tool.ruff.format]
preview = true
