[metadata]
name = makester
version = file: src/makester/VERSION
description = Common Project Build and Management Tooling
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/loum/makester
author = Lou Markovski
author_email = lou.markovski@gmail.com
license = MIT
license_files = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3

[options]
python_requires = >=3
packages = find:
package_dir =
    =src
install_requires =
    Jinja2
    backoff
    black
    build
    logga
    mdformat
    mdformat-admon
    mkdocs-material
    mkdocs-material-extensions
    mkdocstrings-python
    mypy
    pipdeptree
    pylint
    typer[all]

[options.packages.find]
where = src

[options.package_data]
makester =
    VERSION

[options.entry_points]
console_scripts =
    makester = makester.__main__:main
